mise en place de la nav plus route Home

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,5 +1,7 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 @import "~bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
 body {
     background-color: lightgray;
 }
