--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Art d'un temps{% endblock %}</title>
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
@@ -11,9 +11,28 @@
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
+           
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <div class "container">
+        {# {% include "menu.html.twig" %} #}
+         {{ include("menu.html.twig") }}
+
+         <h1>{% block titreH1 %}Art d'un temps{% endblock %}</h1>
+
+        {% block body %}
+
+        <h1>Art d'un temps</h1>
+
+        {% endblock %}
+
+        {% block footer %}
+            <br>
+            <footer>
+
+            </footer>
+        {% endblock %}   
+        </div>    
     </body>
 </html>
