--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -1,28 +1,60 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+ <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            
+            <div class="container-fluid">
+                <!-- LOGO -->
+               <a class="navbar-brand" href="#">
+                <!--<img src="" alt="Mon logo">
+                </a>!--> 
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-    </ul>
-  </div>
-</nav>
+                <!-- TOGGLE BUGER MENU -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <!-- INCLUS DANS LE TOGGLE MENU BURGER -->                
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+                    <!-- NAV -->
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Concept</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Oeuvres</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Evénements</a>
+                        </li>
+                    </ul>
+
+                    <!-- Inscription / Connexion -->  
+                    {% if is_granted("IS_AUTHENTICATED_FULLY") %} {# {% if app.user %} #}
+                        <li class="nav-item">
+                             <a class="nav-link" href="">
+                             <i class="fa fa-user"></i> {{ app.user.pseudo }}
+                            </a>
+                        </li>
+
+		                    <li class="nav-item">
+                              <a class="nav-link" href="#">
+                                <i class="fa fa-sign-out-alt"></i>
+                              </a>
+                        </li>
+                     {% else %}
+                          <form class="d-flex">
+                        <a class="nav-link" href="#">S'incrire</a>
+                        <button class="btn btn-primary" type="submit">Se connecter</button>
+                    </form>
+                        {% endif %}  
+
+
+                </div>
+
+            </div>
+
+        </nav>
+    </header>
