--- a/templates/oeuvre/index.html.twig
+++ b/templates/oeuvre/index.html.twig
@@ -1,20 +1,49 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello OeuvreController!{% endblock %}
+{% block title %}Oeuvre index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Oeuvre index</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Reference</th>
+                <th>Categorie</th>
+                <th>Nom_oeuvre</th>
+                <th>Année</th>
+                <th>Dimension</th>
+                <th>Prix</th>
+                <th>Photo</th>
+                <th>Stock</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for oeuvre in oeuvres %}
+            <tr>
+                <td>{{ oeuvre.id }}</td>
+                <td>{{ oeuvre.reference }}</td>
+                <td>{{ oeuvre.categorie }}</td>
+                <td>{{ oeuvre.nomOeuvre }}</td>
+                <td>{{ oeuvre.année ? oeuvre.année|date('Y-m-d') : '' }}</td>
+                <td>{{ oeuvre.dimension }}</td>
+                <td>{{ oeuvre.prix }}</td>
+                <td>{{ oeuvre.photo }}</td>
+                <td>{{ oeuvre.stock }}</td>
+                <td>
+                    <a href="{{ path('oeuvre_show', {'id': oeuvre.id}) }}">show</a>
+                    <a href="{{ path('oeuvre_edit', {'id': oeuvre.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="10">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/htdocs/Art-d-un-temps/src/Controller/OeuvreController.php'|file_link(0) }}">src/Controller/OeuvreController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/Art-d-un-temps/templates/oeuvre/index.html.twig'|file_link(0) }}">templates/oeuvre/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <a href="{{ path('oeuvre_new') }}">Create new</a>
 {% endblock %}
