--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,12 +10,12 @@
     <h1>Register</h1>
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.pseudo) }}
+       {#  {{ form_row(registrationForm.pseudo) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+        <button type="submit" class="btn">Register</button> #}
+    {{ form_end(registrationForm) }} 
 {% endblock %}
