--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -52,9 +52,9 @@
 					</li>
 				{% else %}
 					<form class="d-flex">
-						<a class="nav-link" href="{{ path("app_register") }}">Incription</a>
-						<a class="nav-link" href="{{ path("app_login") }}">Connexion</a>
-						{# <button class="btn btn-warning" type="submit">Se connecter</button> #}
+						<a class="nav-link" href="{{ path("app_register") }}">Inscription</a>
+						<a class="btn btn-warning" href="{{ path("app_login") }}">Connexion</a>
+						{#<button class="btn btn-warning" href="{{ path("app_login") }}">Se connecter</button>#}
 						
 					</form>
 				{% endif %}
