mise à jour nom de la bdd

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,6 +34,79 @@
             <br>
             <footer>
 
+<h2>
+    Inscrivez vous à la newsletter</h2>
+
+<p>Soyez informés des nouvelles oeuvres et artistes en ligne. Vous pourrez également recevoir des articles dédiés selon vos critères personnalisés</p>
+
+<form action="" method="post">
+    <input type="email" name="email">
+
+    <button type="submit">S'INSCRIRE</button>
+</form>
+
+<hr>
+<br>
+
+<div class="d-flex justify-content-between">
+    <h3>Suivez-nous sur les réseaux sociaux</h3>
+    <div>
+        <a href="#">
+            <i class="fab fa-facebook fa-3x"></i>
+        </a>
+        <a href="#">
+            <i class="fab fa-instagram fa-3x"></i>
+        </a>
+        <a href="#">
+            <i class="fab fa-twitter fa-3x"></i>
+        </a>
+        <a href="#">
+            <i class="fab fa-pinterest fa-3x"></i>
+        </a>
+    </div>
+</div>
+<br>
+
+
+<div class="accordion accordion-flush" id="accordionFlushExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+        Informations
+      </button>
+    </h2>
+    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+        Thématiques
+      </button>
+    </h2>
+    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+        Contacts
+      </button>
+    </h2>
+    <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+    </div>
+  </div>
+</div>
+
+
+
+ ©
+                <script>
+                    document.write(new Date().getUTCFullYear());
+                </script> .Tout droits réservés, Design by Milo
             </footer>
         {% endblock %}   
         </div>    
