--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,15 +1,64 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 @import "~bootstrap/scss/bootstrap";
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
+
+@font-face {
+    font-family: 'noteworthybold';
+    src: url('/assets/fonts/noteworthy-bold-webfont.woff2') format('woff2'),
+         url('/assets/fonts/noteworthy-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
 body {
     background-color: white;
 }
 
-.btn {
+.logo {
+    width:70px;
+}
+h2{
+    font-family: 'noteworthybold';
+    font-size: 24px;
+    padding: 20px 20px;
+}
+
+.navbar-light .navbar-nav .nav-link
+{
+    color: #04ac89;
+}
+.navbar-light .navbar-nav .nav-link:hover
+{
+    color:#ffbf00;
+}
+#inscription {
+
+    color: #04ac89;
+}
+
+#inscription:hover {
+    color: #ffbf00;
+
+}
+
+
+
+
+.btn{
     border-radius: 22.5px;
     font-weight: bold;
 }
 
 li {
     list-style-type: none;
+}
+
+#focus{
+    background-image: url("/public/images/focus-bg.jpg");
+    background-size: cover;
+    color: #FFF;
 }
