--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -1,28 +1,23 @@
 <header>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-		<div
-			class="container-fluid">
+		<div class="container-fluid">
 			<!-- LOGO -->
-			<div class="logo">
-				<a class="navbar-brand" href="#">
-					<img src="/images/logo.png" alt="Mon logo">
-				</a>
-			</div>
-
+			<a class="navbar-brand" href="#">
+				<img class="logo"src="/images/logo.png" alt="Mon logo">
+			</a>
 			<!-- TOGGLE BUGER MENU -->
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 
 			<!-- INCLUS DANS LE TOGGLE MENU BURGER -->
-			<div
-				/class="collapse navbar-collapse" id="navbarSupportedContent">
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 
 				<!-- NAV -->
 				<ul class="navbar-nav mx-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="">Accueil</a>
+						<a class="nav-link" href="">Accueil</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Concept</a>
@@ -38,21 +33,24 @@
 				<!-- Inscription / Connexion -->
 				{% if is_granted("IS_AUTHENTICATED_FULLY") %}
 					{# {% if app.user %} #}
-					<li class="nav-item">
-						<a class="nav-link" href="">
-							<i class="fa fa-user"></i>
-							{{ app.user.pseudo }}
-						</a>
-					</li>
-
-					<li class="nav-item">
-						<a class="nav-link" href="{{ path("app_logout") }}">
-							<i class="fa fa-sign-out-alt"></i>
-						</a>
-					</li>
+					<ul class="navbar-nav
+					 mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="nav-link" href="">
+								<i class="fa fa-user"></i>
+								{{ app.user.pseudo }}
+							</a>
+						</li>
+	
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path("app_logout") }}">
+								<i class="fa fa-sign-out-alt"></i>
+							</a>
+						</li>
+					</ul>
 				{% else %}
 					<form class="d-flex">
-						<a class="nav-link" href="{{ path("app_register") }}">Inscription</a>
+						<a id="inscription" class="nav-link" href="{{ path("app_register") }}">Inscription</a>
 						<a class="btn btn-warning" href="{{ path("app_login") }}">Connexion</a>
 						{#<button class="btn btn-warning" href="{{ path("app_login") }}">Se connecter</button>#}
 						
