--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -45,12 +45,10 @@ h2{
 
 }
 
-
-
-
 .btn{
     border-radius: 22.5px;
     font-weight: bold;
+    background-image: linear-gradient(to right, #ffc200, #fff900);
 }
 
 li {
@@ -61,4 +59,46 @@ li {
     background-image: url("/public/images/focus-bg.jpg");
     background-size: cover;
     color: #FFF;
+    padding-bottom: 50px;
+}
+.bienvenue {
+    width: 195px;
+    height: 51px;
+    margin: 0 386px 4px 284px;
+    text-shadow: 0 2px 4px #000000;
+     font-family: 'PermanentMarker';
+     font-size: 36px;
+    color: #ffffff;
+}
+.inscrivez-vous {
+    width: 330px;
+    height: 19px;
+    margin: 4px 323px 11px 212px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #ffffff;
+  }
+#cards {
+    background-color: #2f2f2f;
+}
+
+.my-3 {
+    color: #ffffff;
+}
+
+.artiste{
+        width: 150px;
+        border-radius: 25px;
+      
+
+}
+.description{
+    float: right;
+    vertical-align: middle;
 }
