--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,12 +14,27 @@
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<img src="/images/slide_mea_02.jpg" class="d-block w-100" alt="...">
+					<div class="carousel-caption">
+                            <h5 class="bienvenue">Bienvenue!</h5>
+                            <p>Inscrivez-vous pour en decouvrir davantage</p>
+                            <button class="btn btn-primary" type="submit">s'inscrire</button>
+                        </div>
 				</div>
 				<div class="carousel-item">
 					<img src="/images/slide_mea_01.jpeg" class="d-block w-100" alt="...">
+					<div class="carousel-caption">
+                            <h5 class="bienvenue">Bienvenue!</h5>
+                            <p class="inscrivez-vous">Inscrivez-vous pour en decouvrir davantage</p>
+                            <button class="btn btn-primary" type="submit">s'inscrire</button>
+                        </div>
 				</div>
 				<div class="carousel-item">
 					<img src="/images/slide_mea_03.jpg" class="d-block w-100" alt="...">
+					<div class="carousel-caption">
+                            <h5 class="bienvenue">Bienvenue!</h5>
+                            <p>Inscrivez-vous pour en decouvrir davantage</p>
+                            <button class="btn btn-primary" type="submit">s'inscrire</button>
+                        </div>
 				</div>
 			</div>
 			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -176,7 +191,8 @@
                <div class="col-sm-5 col-lg-4 position-relative">
                     <h2 class="mt-3"> 
                         <i class="quotes fas fa-angle-double-left"></i>   
-                        <p>Focus du moment sur un artiste ou une technique</p>
+                        <p>Focus du moment sur un<br>
+						 artiste ou une technique</p>
                         <i class="quotes fas fa-angle-double-right"></i> 
                     </h2>
                </div>
@@ -203,11 +219,11 @@
                 <!-- CAROUSEL CARDS --> 
                 <div id="carouselExampleDark" class="py-3 carousel carousel-dark slide" data-bs-ride="carousel">
     
-                    <!-- <div class="carousel-indicators">
+                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    </div> -->
+                    </div> 
 
                     <div class="carousel-inner">
 
@@ -323,6 +339,39 @@
                                         </div>
                                         <div class="card-body">
                                         <a href="#" class="card-link">Card link <i class="fas fa-chevron-right"></i></a>
+</section>
+<section>
+	<div class="container">
+
+		<h2>Les artistes en ligne</h2>
+			<div class="row">
+					<div class="col-lg-3">
+							<img class="artiste"src="/images/artiste_01.jpg"></img>
+							<h6>Jane Leroux</h6>
+						
+					</div>
+
+			
+					<div class="col-lg-3">
+							<img class="artiste"src="/images/artiste_02.jpg"></img>
+					</div>
+
+		
+					<div class="col-lg-3">
+							<img class="artiste"src="/images/artiste_01.jpg"></img>
+					</div>
+					
+					<div class="col-lg-3">
+							<img class="artiste"src="/images/artiste_02.jpg"></img>
+					</div>
+				
+
+			
+					
+			</div>
+	</div>
+
+		
 </section>
                                     
 
