--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -345,28 +345,50 @@
 
 		<h2>Les artistes en ligne</h2>
 			<div class="row">
-					<div class="col-lg-3">
+					<div class="col-lg-3 d-xl-flex">
+							<div>
 							<img class="artiste"src="/images/artiste_01.jpg"></img>
-							<h6>Jane Leroux</h6>
+							</div>
+							<div class="align-self-xl-center">
+								<p class="description">Jane Leroux</p>
+								<p class="peintre-lyon">Peintre-Lyon</p>
+							</div>
 						
 					</div>
 
-			
-					<div class="col-lg-3">
+					<div class="col-lg-3 d-xl-flex">
+							<div>
 							<img class="artiste"src="/images/artiste_02.jpg"></img>
+							</div>
+							<div class="align-self-xl-center">
+								<p class="description">Jane Leroux</p>
+								<p class="peintre-lyon">Peintre-Lyon</p>
+							</div>
+						
 					</div>
 
-		
-					<div class="col-lg-3">
+					<div class="col-lg-3 d-xl-flex">
+							<div>
 							<img class="artiste"src="/images/artiste_01.jpg"></img>
+							</div>
+							<div class="align-self-xl-center">
+								<p class="description">Jane Leroux</p>
+								<p class="peintre-lyon">Peintre-Lyon</p>
+							</div>
+						
 					</div>
-					
-					<div class="col-lg-3">
-							<img class="artiste"src="/images/artiste_02.jpg"></img>
-					</div>
-				
 
-			
+					<div class="col-lg-3 d-xl-flex">
+							<div>
+							<img class="artiste"src="/images/artiste_02.jpg"></img>
+							</div>
+							<div class="align-self-xl-center">
+								<p class="description">Jane Leroux</p>
+								<p class="peintre-lyon">Peintre-Lyon</p>
+							</div>
+						
+					</div>
+
 					
 			</div>
 	</div>
