--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -28,7 +28,7 @@
                 </div>
                 <div class="border rounded p-4 m-3 bg-white">
                     <h3> Vos informations personelles</h3>
-                    <p>Pour nous permettre de vous proposer des actualités et des artistes proche de chez vous, veuillez renseigner votre adresse.</p>
+                    <p>Pour nous permettre de vous proposer des actualités et des artistes proches de chez vous, veuillez renseigner votre adresse.</p>
                     {{ form_row(registrationForm.nom) }}
                     {{ form_row(registrationForm.prenom) }}
                     {{ form_row(registrationForm.email) }}
