Ajout de css et modif Register et registrationForm

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -135,3 +135,6 @@ li {
 //********************************
 // STYLES FORM INSCRIPTION
 //********************************
+.custom-file-input:lang(fr) ~ .custom-file-label::after{
+    content: "Parcourir";
+}
