--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,9 +18,7 @@
 		{% endblock %}
 	</head>
 	<body>
-		<div
-			class="container-fluid">
-			{# {% include "menu.html.twig" %} #}
+		<div class="container-fluid">
 			{{ include("menu.html.twig") }}
 
 			<h1>
@@ -28,7 +26,6 @@
 			</h1>
 
 			{% block body %}
-				<div class="container"></div>
 
 
 			{% endblock %}
