Correction année sur table Oeuvre - Entity, Type et fichier twig -

--- a/templates/oeuvre/index.html.twig
+++ b/templates/oeuvre/index.html.twig
@@ -27,7 +27,7 @@
                 <td>{{ oeuvre.reference }}</td>
                 <td>{{ oeuvre.categorie }}</td>
                 <td>{{ oeuvre.nomOeuvre }}</td>
-                <td>{{ oeuvre.année ? oeuvre.année|date('Y-m-d') : '' }}</td>
+                <td>{{ oeuvre.annee ? oeuvre.annee|date('Y-m-d') : '' }}</td>
                 <td>{{ oeuvre.dimension }}</td>
                 <td>{{ oeuvre.prix }}</td>
                 <td>{{ oeuvre.photo }}</td>
