--- a/templates/oeuvre/show.html.twig
+++ b/templates/oeuvre/show.html.twig
@@ -25,7 +25,7 @@
             </tr>
             <tr>
                 <th>Année</th>
-                <td>{{ oeuvre.année ? oeuvre.année|date('Y-m-d') : '' }}</td>
+                <td>{{ oeuvre.annee ? oeuvre.annee|date('Y-m-d') : '' }}</td>
             </tr>
             <tr>
                 <th>Dimension</th>
