--- a/templates/profil/profil_admin.html.twig
+++ b/templates/profil/profil_admin.html.twig
@@ -1,4 +1,4 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Profil {{app.user.nameuser}}
+{% block title %}Profil {{app.user.username}}
 {% endblock %}
