--- a/templates/profil/profil_membre.html.twig
+++ b/templates/profil/profil_membre.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Profil
+{% block title %}Profil {{app.user.username}}
 {% endblock %}
 
 {# {% block h1 %}Mon profil
