--- a/templates/profil/profil_artiste.html.twig
+++ b/templates/profil/profil_artiste.html.twig
@@ -1,4 +1,3 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Profil {{app.user.username}}
-{% endblock %}
+{% block title %}Profil {{app.user.username}} {% endblock %}
