Affichage Page profil admin

--- a/templates/profil/profil_artiste.html.twig
+++ b/templates/profil/profil_artiste.html.twig
@@ -25,7 +25,7 @@
 			<ul class="col-lg-8 ul-profil">
 				<li>Nom & Prénom : {{ app.user.nom }} {{ app.user.prenom }}</li>
 				<li>Pseudo : {{ app.user.pseudo }}</li>
-				<li>Adresse mail : {{ app.user.email }}</li>			
+				<li>E-mail : {{ app.user.email }}</li>			
 				<li>Adresse : {{ app.user.adresse }}</li>
 				<li>Code Postal - Ville : {{ app.user.cp }} {{ app.user.ville }}</li>
 			</ul>
