--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,24 +44,24 @@
             					<form action="" method="post">
             						<input type="email" name="email">
             
-            						<button type="submit">S'INSCRIRE</button>
+            						<button class="btn" type="submit">S'INSCRIRE</button>
             					</form>
         
         					</div>    
-        
-        					<div class="col-xl-4 d-flex justify-content-between flex-xl-column ">
+        <hr>
+        					<div class="r-sociaux col-xl-4 d-flex justify-content-between flex-xl-column ">
         						<h3>Suivez-nous sur les réseaux sociaux</h3>
         						<div>
-        							<a href="#">
+        							<a href="https://www.facebook.com/">
         								<i class="fab fa-facebook"></i>
         							</a>
-        							<a href="#">
+        							<a href="https://www.instagram.com/">
         								<i class="fab fa-instagram"></i>
         							</a>
-        							<a href="#">
+        							<a href="https://twitter.com/?lang=fr">
         								<i class="fab fa-twitter"></i>
         							</a>
-        							<a href="#">
+        							<a href="https://www.pinterest.fr/">
         								<i class="fab fa-pinterest "></i>
         							</a>
         						</div>
@@ -69,6 +69,22 @@
 					    </div>
 					</div>
 <hr>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-link" href="#">Features</a>
+      <a class="nav-link" href="#">Pricing</a>
+      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+    </div>
+  </div>
+</nav>
+
 <div class="container-fluid">
     
     
@@ -126,7 +142,7 @@
     									<ul>
                                             <li><i class="fas fa-mobile-alt"></i>Par téléphone au .....</li>
                                             <li><i class="far fa-envelope"></i>Par mail en remplissant
-    										<a href="#">ce formulaire</a></li>
+    										<a href="">ce formulaire</a></li>
                                         </ul>
     									</p>
     								</div>
@@ -136,7 +152,7 @@
 </div>
 					<br>
 					<div class="text-center">
-						©
+						&copy;
 						<script>
 							document.write(new Date().getUTCFullYear());
 						</script>
