--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -6,8 +6,22 @@
 			<a class="navbar-brand" href="#">
 				<img class="logo"src="/images/logo.png" alt="Mon logo">
 			</a>
+
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav mx-auto mb-2 mb-lg-0">
+      <a class="nav-link" href="#">Accueil</a>
+      <a class="nav-link" href="#">Concept</a>
+      <a class="nav-link" href="#">Oeuvres</a>
+      <a class="nav-link " href="#">Evénements</a>
+      
+    
 			<!-- TOGGLE BUGER MENU -->
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			{# <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 
@@ -28,7 +42,7 @@
 					<li class="nav-item">
 						<a class="nav-link" href="#">Evénements</a>
 					</li>
-				</ul>
+				</ul> #}
 
 				<!-- Inscription / Connexion -->
 				{% if is_granted("IS_AUTHENTICATED_FULLY") %}
