Correction des // dans titre commentaire Style Profil

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -178,9 +178,10 @@ footer {
     background-image: linear-gradient(to right, #ffc200, #fff900);
 }
 
-// *******************************
-STYLES PROFIL
 //********************************
+//STYLES PROFIL
+//********************************
+
 .h2-profil{
     color: white;
 }
