--- a/templates/membre/_delete_form.html.twig
+++ b/templates/membre/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('membre_delete', {'id': membre.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ membre.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn"><i class="fas fa-trash-alt"></i> Supprimer ce membre</button>
 </form>
