modification footer et création formulaire contact + autre modification

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,7 +2,6 @@
 // REDÉFINITIONS DE VARIABLES
 //********************
 $breadcrumb-divider: quote(">");
-
 //********************
 // IMPORTS
 //********************
@@ -49,17 +48,21 @@ li {
     list-style-type: none;
 }
 
+
 /* Styles Breadcrumb */
 
-.breadcrumb-item a{
+.breadcrumb-item a {
     color: #ffbf00;
 }
-.breadcrumb-item + .breadcrumb-item::before{
+
+.breadcrumb-item+.breadcrumb-item::before {
     color: white;
 }
-.breadcrumb-item.active{
+
+.breadcrumb-item.active {
     color: white;
 }
+
 //********************
 // STYLES HEADER
 //********************
@@ -157,6 +160,29 @@ li {
 }
 
 //********************************
+// STYLES FORM INSCRIPTION
+//********************************
+.bc-formulaire_contact {
+    background-color: #dfdede;
+}
+
+.h1-formulaire_contact {
+    font-family: 'Permanent Marker', cursive;
+    color: #2F2F2F;
+    font-size: 36px;
+    text-align: center;
+    text-shadow: none;
+}
+
+.btn-formulaire_contact {
+    border-radius: 22.5px;
+    font-weight: bold;
+    padding: 10px 20px;
+    background-image: linear-gradient(to right, #ffc200, #fff900);
+    color: #2F2F2F;
+}
+
+//********************************
 // STYLES FOOTER
 //********************************
 footer {
@@ -164,9 +190,38 @@ footer {
     color: #F5F5F5;
 }
 
-.t {
+footer li {
+    color: #F5F5F5;
+}
+
+
+/* footer p {
+    text-decoration: none;
+}
+ */
+
+footer hr {
+    width: 90%;
+    height: 1px;
+    background-color: #FFCB00;
+    border: none;
+}
+
+.modif-accordeon {
     background-color: #2F2F2F;
     color: #F5F5F5;
+}
+
+.modif-accordeon p {
+    color: #F5F5F5;
+}
+
+.modif-accordeon p:hover {
+    color: #FFCB00;
+}
+
+.modif-accordeon i:hover {
+    color: #FFCB00;
 }
 
 .r-sociaux i {
@@ -181,20 +236,18 @@ footer {
 //********************************
 //STYLES PROFIL
 //********************************
-
-.h2-profil{
+.h2-profil {
     color: white;
 }
 
-.img-membre{
+.img-membre {
     width: 150px;
 }
 
-.ul-profil{
+.ul-profil {
     color: white;
 }
 
 .li-profil {
     list-style-type: disc;
 }
-
