--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,15 +42,15 @@
             					<p>Soyez informés des nouvelles oeuvres et artistes en ligne. Vous pourrez également recevoir des articles dédiés selon vos critères personnalisés</p>
             
             					<form action="" method="post">
-            						<input type="email" name="email">
+            						<input class="pb-2" type="email" name="email">
             
-            						<button class="btn" type="submit">S'INSCRIRE</button>
+            						<button class="btn" type="submit">S'inscrire</button>
             					</form>
         
         					</div>    
-        <hr>
+      								  <hr class="d-xl-none">
         					<div class="r-sociaux col-xl-4 d-flex justify-content-between flex-xl-column ">
-        						<h3>Suivez-nous sur les réseaux sociaux</h3>
+        						<h2>Suivez-nous sur les réseaux sociaux</h2>
         						<div>
         							<a href="https://www.facebook.com/">
         								<i class="fab fa-facebook"></i>
@@ -68,18 +68,19 @@
         					</div>
 					    </div>
 					</div>
-<hr>
+								<hr>
 
 <div class="container-fluid">
     
     
     					<div class="row accordion" id="accordionExample">
-    						<div class="col-xl-4 card">
+    						<div class="modif-accordeon col-xl-4 card">
     							<div class="card-header" id="headingOne">
-    								<h2 class="mb-0">
-    									<button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-    										Informations
-    									</button>
+    								<h2 class="d-flex mb-0">
+    									<p class=" btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+    										Informations 
+    									</p>
+										<div><i class="d-xl-none fas fa-plus"></i></div>
     								</h2>
     							</div>
     
@@ -87,7 +88,7 @@
     								<div class="card-body">
     									<ul>
                                             <a href="#"><li>A propos</li></a>
-                                            <a href="#"><li></li>F.A.Q.</a>
+                                            <a href="#"><li>F.A.Q.</li></a>
                                             <a href="#"><li>Mentions Légales</li></a>
                                             <a href="#"><li>C.G.U.</li></a>
                                             
@@ -95,12 +96,13 @@
     								</div>
     							</div>
     						</div>
-    						<div class="col-xl-4 card">
+    						<div class="modif-accordeon col-xl-4 card">
     							<div class="card-header" id="headingTwo">
-    								<h2 class="mb-0">
-    									<button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-    										Thématiques
-    									</button>
+    								<h2 class="d-flex mb-0">
+    									<p class=" btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+    										Thématiques 
+    									</p>
+										<div><i class="d-xl-none fas fa-plus"></i></div>
     								</h2>
     							</div>
     							<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
@@ -114,12 +116,13 @@
     								</div>
     							</div>
     						</div>
-    						<div class="col-xl-4 card">
+    						<div class="modif-accordeon col-xl-4 card">
     							<div class="card-header" id="headingThree">
-    								<h2 class="mb-0">
-    									<button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+    								<h2 class="d-flex mb-0">
+    									<p class="btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
     										Contacts
-    									</button>
+    									</p>
+										<div><i class="d-xl-none fas fa-plus"></i></div>
     								</h2>
     							</div>
     							<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
@@ -127,14 +130,14 @@
     									<ul>
                                             <li><i class="fas fa-mobile-alt"></i>Par téléphone au .....</li>
                                             <li><i class="far fa-envelope"></i>Par mail en remplissant
-    										<a href="">ce formulaire</a></li>
+    										<a href="{{ path("formulaire_contact") }}">ce formulaire</a></li>
                                         </ul>
     									</p>
     								</div>
     							</div>
     						</div>
     					</div>
-</div>
+
 					<br>
 					<div class="text-center">
 						&copy;
@@ -143,7 +146,7 @@
 						</script>
 						.Tous droits réservés, Design by ESDJ
 					</div>
-
+</div>
 				</footer>
 			{% endblock %}
 		</div>
