--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -7,7 +7,7 @@
 				<img class="logo"src="/images/logo.png" alt="Mon logo">
 			</a>
 
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			{# <nav class="navbar navbar-expand-lg navbar-light bg-light"> #}
   <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
