--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,149 +3,153 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Art d'un temps
-			{% endblock %}
+			{% block title %} Art d'un temps {% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-		           and uncomment the following Encore helpers to start using Symfony UX #}
+				           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
 
 		{% block javascripts %}
 			{{ encore_entry_script_tags('app') }}
-
 		{% endblock %}
+
 	</head>
 	<body>
-		<div class="container-fluid">
+		<div class="container-fluid p-0">
 			{{ include("menu.html.twig") }}
 
-			<h1>
-				{% block titreH1 %}{% endblock %}
-			</h1>
+			<h1> {% block titreH1 %}{% endblock %} </h1>
 
-			{% block body %}
-
-
-			{% endblock %}
+			{% block body %}{% endblock %}
 
 			{% block footer %}
 				<footer>
+					<div class="container-fluid">
+						<div class="row justify-content-xl-around">
+							<div class="col-xl-7">
+								<h2> Inscrivez vous à la newsletter </h2>
+
+								<p>Soyez informés des nouvelles oeuvres et artistes en ligne. Vous pourrez également recevoir des articles dédiés selon vos critères personnalisés</p>
+
+								<form action="" method="post">
+									<input type="email" name="email">
+									<button class="btn" type="submit">S'INSCRIRE</button>
+								</form>
+
+							</div>
+							<hr>
+							<div class="r-sociaux col-xl-4 d-flex justify-content-between flex-xl-column ">
+								<h3> Suivez-nous sur les réseaux sociaux </h3>
+								<div>
+									<a href="https://www.facebook.com/">
+										<i class="fab fa-facebook"></i>
+									</a>
+									<a href="https://www.instagram.com/">
+										<i class="fab fa-instagram"></i>
+									</a>
+									<a href="https://twitter.com/?lang=fr">
+										<i class="fab fa-twitter"></i>
+									</a>
+									<a href="https://www.pinterest.fr/">
+										<i class="fab fa-pinterest "></i>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<hr>
 
 					<div class="container-fluid">
-					    <div class="row justify-content-xl-around">
-					        <div class="col-xl-7">
-        					    <h2>
-            						Inscrivez vous à la newsletter</h2>
-            
-            					<p>Soyez informés des nouvelles oeuvres et artistes en ligne. Vous pourrez également recevoir des articles dédiés selon vos critères personnalisés</p>
-            
-            					<form action="" method="post">
-            						<input type="email" name="email">
-            
-            						<button class="btn" type="submit">S'INSCRIRE</button>
-            					</form>
-        
-        					</div>    
-        <hr>
-        					<div class="r-sociaux col-xl-4 d-flex justify-content-between flex-xl-column ">
-        						<h3>Suivez-nous sur les réseaux sociaux</h3>
-        						<div>
-        							<a href="https://www.facebook.com/">
-        								<i class="fab fa-facebook"></i>
-        							</a>
-        							<a href="https://www.instagram.com/">
-        								<i class="fab fa-instagram"></i>
-        							</a>
-        							<a href="https://twitter.com/?lang=fr">
-        								<i class="fab fa-twitter"></i>
-        							</a>
-        							<a href="https://www.pinterest.fr/">
-        								<i class="fab fa-pinterest "></i>
-        							</a>
-        						</div>
-        					</div>
-					    </div>
-					</div>
-<hr>
 
-<div class="container-fluid">
-    
-    
-    					<div class="row accordion" id="accordionExample">
-    						<div class="col-xl-4 card">
-    							<div class="card-header" id="headingOne">
-    								<h2 class="mb-0">
-    									<button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-    										Informations
-    									</button>
-    								</h2>
-    							</div>
-    
-    							<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-    								<div class="card-body">
-    									<ul>
-                                            <a href="#"><li>A propos</li></a>
-                                            <a href="#"><li></li>F.A.Q.</a>
-                                            <a href="#"><li>Mentions Légales</li></a>
-                                            <a href="#"><li>C.G.U.</li></a>
-                                            
-                                        </ul>
-    								</div>
-    							</div>
-    						</div>
-    						<div class="col-xl-4 card">
-    							<div class="card-header" id="headingTwo">
-    								<h2 class="mb-0">
-    									<button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-    										Thématiques
-    									</button>
-    								</h2>
-    							</div>
-    							<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-    								<div class="card-body">
-    									<ul>
-                                            <a href="#"><li>Peintures</li></a> 
-                                            <a href="#"><li>Sculptures</li></a> 
-                                            <a href="#"><li>Céramiques</li></a> 
-                                            <a href="#"><li>StreetArt</li></a> 
-                                        </ul>
-    								</div>
-    							</div>
-    						</div>
-    						<div class="col-xl-4 card">
-    							<div class="card-header" id="headingThree">
-    								<h2 class="mb-0">
-    									<button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-    										Contacts
-    									</button>
-    								</h2>
-    							</div>
-    							<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-    								<div class="card-body">
-    									<ul>
-                                            <li><i class="fas fa-mobile-alt"></i>Par téléphone au .....</li>
-                                            <li><i class="far fa-envelope"></i>Par mail en remplissant
-    										<a href="">ce formulaire</a></li>
-                                        </ul>
-    									</p>
-    								</div>
-    							</div>
-    						</div>
-    					</div>
-</div>
-					<br>
-					<div class="text-center">
-						&copy;
-						<script>
-							document.write(new Date().getUTCFullYear());
-						</script>
-						.Tous droits réservés, Design by ESDJ
-					</div>
+						<div class="row accordion" id="accordionExample">
+							<div class="col-xl-4 card">
+								<div class="card-header" id="headingOne">
+									<h2 class="mb-0">
+										<button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+											Informations
+										</button>
+									</h2>
+								</div>
 
-				</footer>
-			{% endblock %}
-		</div>
+								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+									<div class="card-body">
+										<ul>
+											<a href="#">
+												<li>A propos</li>
+											</a>
+											<a href="#">
+												<li></li>F.A.Q.</a>
+											<a href="#">
+												<li>Mentions Légales</li>
+											</a>
+											<a href="#">
+												<li>C.G.U.</li>
+											</a>
+
+										</ul>
+									</div>
+								</div>
+							</div>
+							<div class="col-xl-4 card">
+								<div class="card-header" id="headingTwo">
+									<h2 class="mb-0">
+										<button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+											Thématiques
+										</button>
+									</h2>
+								</div>
+								<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+									<div class="card-body">
+										<ul>
+											<a href="#">
+												<li>Peintures</li>
+											</a>
+											<a href="#">
+												<li>Sculptures</li>
+											</a>
+											<a href="#">
+												<li>Céramiques</li>
+											</a>
+											<a href="#">
+												<li>Street-Art</li>
+											</a>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<div class="col-xl-4 card">
+								<div class="card-header" id="headingThree">
+									<h2 class="mb-0">
+										<button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+											Contacts
+										</button>
+									</h2>
+								</div>
+								<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+									<div class="card-body">
+										<ul>
+											<li>
+												<i class="fas fa-mobile-alt"></i>Par téléphone au .....</li>
+											<li>
+												<i class="far fa-envelope"></i> Par mail en remplissant <a href="">ce formulaire</a>
+											</li>
+										</ul>
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<br>
+				<div class="text-center">
+					&copy;
+					<script> document.write(new Date().getUTCFullYear()); </script>.Tous droits réservés, Design by ESDJ.
+				</div>
+
+			</footer>
+		{% endblock %}
 	</body>
-</html>
+</html></div></body></html>
