--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,35 +11,35 @@
                 <div class="carousel-item active">
                     <img src="/images/slide_mea_02.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption">
-                        <h5 class="bienvenue">Bienvenue!</h5>
-                        <p>Inscrivez-vous pour en decouvrir davantage</p>
-                        <button class="btn btn-primary" type="submit">s'inscrire</button>
+                        <h1>Bienvenue!</h1>
+                        <p class="sinscrire">Inscrivez-vous pour en découvrir davantage</p>
+                        <button class="btn btn-primary" type="submit">S'inscrire</button>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="/images/slide_mea_01.jpeg" class="d-block w-100" alt="...">
                     <div class="carousel-caption">
-                        <h5 class="bienvenue">Bienvenue!</h5>
-                        <p class="inscrivez-vous">Inscrivez-vous pour en decouvrir davantage</p>
-                        <button class="btn btn-primary" type="submit">s'inscrire</button>
+                        <h1>Bienvenue!</h1>
+                        <p class="sinscrire">Inscrivez-vous pour en découvrir davantage</p>
+                        <button class="btn btn-primary" type="submit">S'inscrire</button>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="/images/slide_mea_03.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption">
-                        <h5 class="bienvenue">Bienvenue!</h5>
-                        <p>Inscrivez-vous pour en decouvrir davantage</p>
-                        <button class="btn btn-primary" type="submit">s'inscrire</button>
+                        <h1>Bienvenue!</h1>
+                        <p class="sinscrire">Inscrivez-vous pour en découvrir davantage</p>
+                        <button class="btn btn-primary" type="submit">S'inscrire</button>
                     </div>
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
+                <span class="sr-only">Précédent</span>
             </a>
             <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
+                <span class="sr-only">Suivant</span>
             </a>
 
         </div>
@@ -49,7 +49,7 @@
 
     <div class="container">
 
-                    <h2 class="text-center">Dernieres oeuvres en ligne</h2>
+                    <h2 class="text-center">Dernières oeuvres en ligne</h2>
                     
                 <div class="row ">
 
@@ -59,8 +59,8 @@
                             
                             <img class="rounded" src="/images/oeuvre_mea_01.jpg">
                             </img>
-                            <h3><a href="#">Name Art</a></h3>
-                            <span class="details-oeuvre">Name Artiste - date</span>
+                            <h3><a href="#">Oeuvre</a></h3>
+                            <span class="details-oeuvre"><a href="#">Artiste</a> - Date</span>
                         </article>
                     </div>
 
@@ -70,8 +70,8 @@
                             
                             <img class="rounded" src="/images/oeuvre_mea_02.jpg">
                             </img>
-                            <h3><a href="#">Name Art</a></h3>
-                            <span class="details-oeuvre">Name Artiste - date</span>
+                            <h3><a href="#">Oeuvre</a></h3>
+                            <span class="details-oeuvre"><a href="#">Artiste</a> - Date</span>
                         </article>
                     </div>
 
@@ -81,8 +81,8 @@
                             
                             <img class="rounded" src="/images/oeuvre_mea_02.jpg">
                             </img>
-                            <h3><a href="#">Name Art</a></h3>
-                            <span class="details-oeuvre">Name Artiste - date</span>
+                            <h3><a href="#">Oeuvre</a></h3>
+                            <span class="details-oeuvre"><a href="#">Artiste</a> - Date</span>
                         </article>
                     </div>
 
@@ -92,8 +92,8 @@
                             
                             <img class="rounded" src="/images/oeuvre_mea_01.jpg">
                             </img>
-                            <h3><a href="#">Name Art</a></h3>
-                            <span class="details-oeuvre">Name Artiste - date</span>
+                            <h3><a href="#">Oeuvre</a></h3>
+                            <span class="details-oeuvre"><a href="#">Artiste</a> - Date</span>
                         </article>
                     </div>
                         
@@ -105,8 +105,8 @@
                                 
                                 <img class="rounded" src="/images/oeuvre_mea_02.jpg">
                                 </img>
-                                <h3><a href="#">Name Art</a></h3>
-                                <span class="details-oeuvre">Name Artiste - date</span>
+                                <h3><a href="#">Oeuvre</a></h3>
+                                <span class="details-oeuvre"><a href="#">Artiste</a> - Date</span>
                             </article>
                         </div>
 
@@ -116,8 +116,8 @@
                                 
                                 <img class="rounded" src="/images/oeuvre_mea_01.jpg">
                                 </img>
-                                <h3><a href="#">Name Art</a></h3>
-                                <span class="details-oeuvre">Name Artiste - date</span>
+                                <h3><a href="#">Oeuvre</a></h3>
+                                <span class="details-oeuvre"><a href="#">Artiste</a> - Date</span>
                             </article>
                         </div>
 
@@ -126,8 +126,8 @@
                             <article id="mea-o1" class="p-3">
                                 <img class="rounded" src="/images/oeuvre_mea_01.jpg">
                                 </img>
-                                <h3><a href="#">Name Art</a></h3>
-                                <span class="details-oeuvre">Name Artiste - date</span>
+                                <h3><a href="#">Oeuvre</a></h3>
+                                <span class="details-oeuvre"><a href="#">Artiste</a> - Date</span>
                             </article>
                         </div>
 
@@ -136,8 +136,8 @@
                             <article id="mea-o4" class="p-3">
                                 <img class="rounded" src="/images/oeuvre_mea_02.jpg">
                                 </img>
-                                <h3><a href="#">Name Art</a></h3>
-                                <span class="details-oeuvre">Name Artiste - date</span>
+                                <h3><a href="#">Oeuvre</a></h3>
+                                <span class="details-oeuvre"><a href="#">Artiste</a> - Date</span>
                             </article>
                         </div>
                     {# </div> #}
@@ -237,7 +237,7 @@
                     </div>
                 </div> #}
     </section>
-    <div><a class="btn btn-warning">Voir toutes les oeuvres</a></div>
+    <div class="d-flex justify-content-xl-end ps-xl-5 justify-content-sm-start"><button class="btn btn-warning ">Voir toutes les oeuvres</button></div>
     <section>
         <div class="container-fluid">
             <h2 class="my-3">Art d'un temps, c'est...</h2>
@@ -291,12 +291,12 @@
             <h2 class="my-3">L'actualité du moment</h2>
             <!-- CAROUSEL CARDS -->
             <div id="carouselExampleDark" class="py-3 carousel carousel-dark slide" data-bs-ride="carousel">
-                <div class="carousel-indicators"><button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button><button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <div class="carousel-indicators d-flex justify-content-between"> <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button><button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"> </button>
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="10000">
-                        <div class="row justify-content-center">
+                        <div class="row justify-content-around">
                             <div class="col-lg-3">
                                 <div class="card" style="width: 18rem;">
                                     <img src="images/slide_mea_03.jpg" class="card-img-top" alt="...">
@@ -349,7 +349,7 @@
                                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                     </div>
                                     <div class="card-body">
-                                        <a href="#" class="card-link">Card link
+                                        <a href="#" class="card-link">Card link 
 		<i class="fas fa-chevron-right"></i>
 	</a>
                                     </div>
