Crud Membre ok sauf photo

--- a/templates/profil/profil_admin.html.twig
+++ b/templates/profil/profil_admin.html.twig
@@ -83,7 +83,7 @@
         </ul>
         
         <div class="col-lg-2">
-            <button class="btn" href="{{ path('membre_edit', {'id': app.user.id}) }}">Modifier</button>
+            <a class="btn" href="{{ path('membre_edit', {'id': app.user.id}) }}">Modifier</a>
         </div>
 
     </div>
