--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -150,10 +150,14 @@ li {
 }
 
 //********************************
-// STYLES FORM INSCRIPTION
+// STYLES FORM INSCRIPTION/CONNEXION
 //********************************
 .custom-file-input:lang(fr)~.custom-file-label::after {
     content: "Parcourir";
+}
+
+.label-log{
+    color: white;
 }
 
 //********************************
