--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
 		{% endblock %}
 	</head>
 	<body>
-		<div class="container-fluid">
+		<div class="container-fluid p-0">
 			{{ include("menu.html.twig") }}
 
 			<h1>
